# Khigy

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake  Macros.cmake  Options.cmake  ProjectConfig.in  WaylandProtocols.cmake
src/: CMakeLists.txt  main.cpp
src/allocator/: CMakeLists.txt
src/allocator/include/allocator/: Allocator.hpp
src/allocator/src/: Allocator.cpp
src/backend/: CMakeLists.txt
src/backend/include/backend/: Backend.hpp
src/backend/src/: Backend.cpp
src/compositor/: CMakeLists.txt
src/compositor/include/compositor/: Compositor.hpp  OutputInstance.hpp  OutputListener.hpp
src/compositor/src/: Compositor.cpp  OutputInstance.cpp  OutputListener.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/renderer/: Renderer.hpp
src/renderer/src/: Renderer.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: Exceptions.hpp  Logger.hpp  Traits.hpp
src/utils/src/: Logger.cpp
